Fix lightbox scrollbar overflow

--- a/source/_assets/sass/_lightbox.scss
+++ b/source/_assets/sass/_lightbox.scss
@@ -11,7 +11,7 @@
 	z-index: 5;
 
 	// main.js will hide body's overflow
-	overflow-y: scroll;
+	overflow-y: hidden;
 
 	// main.js will show the lightbox
 	pointer-events: none;
