--- a/source/_assets/sass/main.scss
+++ b/source/_assets/sass/main.scss
@@ -5,6 +5,10 @@
 @import 'func';
 
 // Some reasonable global settings...
+html {
+	overflow-y: scroll;
+}
+
 html, body {
 
 	overflow-x: hidden;
